<?xml version="1.0"?>
<package>
  <name>atom_map_example</name>
  <version>0.0.1</version>
  <description>The atom_map_example package</description>

  <author email="dfk@eecs.berkeley.edu">DFK</author>
  <author email="eanelson@eecs.berkeley.edu">EAN</author>
  <maintainer email="dfk@eecs.berkeley.edu">DFK</maintainer>
  <maintainer email="eanelson@eecs.berkeley.edu">EAN</maintainer>

  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>atom_map</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>atom_map</run_depend>
</package>
